# duicoin-core

./: .gitignore  CMakeLists.txt  README.md
docs/: windows_setup_and_testing_guide.md
src/crypto/: ed25519.cpp
src/gui/: digital_clock.cpp  digital_clock.h  main_window.cpp  main_window.h  world_clock.cpp  world_clock.h
